@@ -1214,6 +1214,9 @@ typedef struct
 #define VID_STRING_COUNT            ((UINT32)604)
 #define VID_EXPAND_STRING           ((UINT32)605)
 #define VID_ACTION_LIST             ((UINT32)606)
+#define VID_ZONE_SNMP_PORT_COUNT    ((UINT32)607)
+#define VID_INCLUDE_RAW_VALUES      ((UINT32)608)
+#define VID_JOB_CANCELED            ((UINT32)609)
 
 // Base variabe for single threshold in message
 #define VID_THRESHOLD_BASE          ((UINT32)0x00800000)
